log
Fri Mar 11 17:58:51 HSP 2022: 
 tests:  0|7
total_score: 0/70
211d1af
Sat Mar 12 11:50:42 HSP 2022: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|6
total_score: 10/70
df56f7c
Sat Mar 12 11:51:23 HSP 2022: 
 exercises.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  1|6
total_score: 10/70
d09bcd3
Sat Mar 12 11:55:31 HSP 2022: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  2|5
total_score: 20/70
c86c7ef
Mon Mar 14 00:52:38 UTC 2022: 
 tests:  2|5
total_score: 20/70
e019da1
Mon Mar 14 00:59:56 UTC 2022: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘crearVector’:
exercises.c:84:3: error: unknown type name ‘vector’; did you mean ‘Vector’?
   vector *arreglo = NULL;
   ^~~~~~
   Vector
exercises.c:86:10: error: request for member ‘datos’ in something not a structure or union
   arreglo->datos = (int *) calloc (n, sizeof(int));
          ^~
exercises.c:90:10: error: request for member ‘capacidad’ in something not a structure or union
   arreglo->capacidad = n;
          ^~
exercises.c:92:10: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
   return arreglo;
          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
595f3dc
Mon Mar 14 01:00:29 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
47e3e60
Mon Mar 14 01:04:33 UTC 2022: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
87fea40
